# ChangeLog for www-client/mozilla-firefox-bin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/Attic/ChangeLog,v 1.190 2009/06/13 10:14:35 armin76 Exp $

*mozilla-firefox-bin-3.5_beta99 (13 Jun 2009)
*mozilla-firefox-bin-3.0.11 (13 Jun 2009)

  13 Jun 2009; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-bin-3.0.8.ebuild, +mozilla-firefox-bin-3.0.11.ebuild,
  +mozilla-firefox-bin-3.5_beta99.ebuild:
  Version bump

  01 May 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  mozilla-firefox-bin-3.0.10, mozilla-firefox-bin-3.5_beta4:
  Keeping the pkg_preinst is causing more problems than removing it, such as
  bug 267363

  01 May 2009; Markus Meier <maekke@gentoo.org>
  mozilla-firefox-bin-3.0.10.ebuild:
  amd64 stable, bug #267234

  29 Apr 2009; Christian Faulhammer <fauli@gentoo.org>
  mozilla-firefox-bin-3.0.10.ebuild:
  stable x86, security bug 267234

*mozilla-firefox-bin-3.5_beta4 (28 Apr 2009)
*mozilla-firefox-bin-3.0.10 (28 Apr 2009)

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-bin-3.0.9.ebuild, +mozilla-firefox-bin-3.0.10.ebuild,
  -mozilla-firefox-bin-3.1_beta3.ebuild,
  +mozilla-firefox-bin-3.5_beta4.ebuild:
  Version bump

*mozilla-firefox-bin-3.0.9 (22 Apr 2009)

  22 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-bin-3.0.9.ebuild, -mozilla-firefox-bin-3.1_beta2.ebuild:
  Version bump

  02 Apr 2009; Olivier Crête <tester@gentoo.org>
  mozilla-firefox-bin-3.0.8.ebuild:
  Stable on amd64, bug #262704

  30 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-bin-3.0.8.ebuild:
  x86 stable wrt #262704

*mozilla-firefox-bin-3.0.8 (28 Mar 2009)

  28 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-bin-3.0.8.ebuild:
  Version bump

*mozilla-firefox-bin-3.1_beta3 (13 Mar 2009)

  13 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-bin-3.1_beta3.ebuild:
  Version bump
