@@ -1,6 +1,10 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/Attic/ChangeLog,v 1.510 2009/06/16 14:59:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/Attic/ChangeLog,v 1.511 2009/06/16 16:19:49 fauli Exp $
+
+  16 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
+  mozilla-firefox-3.0.11.ebuild:
+  stable x86, security bug 273918
 
   16 Jun 2009; Jeroen Roovers <jer@gentoo.org>
   mozilla-firefox-3.0.11.ebuild:
